2008-03-11  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* apt-worker-bin.cc (get_apt_worker_lock) : try to get the lock
	five times before giving up and exiting (N82152).

2008-03-12  Mario Sanchez Prada  <msanchez@maemo.org>

	* utils/maemo-select-menu-location-main.c (run_move_to_dialog):
	Set a minimum size for the 'Change folder' dialog so it looks at
	least as wide as if it had the three buttons (N80831).

	* utils/maemo-confirm-text-user.c (dialog_exposed): Removed, since
	it won't be needed from now on as the dialog will be system modal,
	so no 'weird' visual effects could happen because of interacting
	with other applications while the dialog is not closed (N81462).
	(dialog_realized): Make the dialog 'system modal' (N81462).
	(main): Make the dialog modal. Removed the handler connection for
	the 'exposed' signal (N81462).

	* src/menu.cc (create_menu): Fixed a memory leak regarding to the
	dimming rule for the 'restore backup' menu item. Fixed a bug about
	not dimming the 'restore backup' menu item when the related
	packages.backup file does not exist on disk (N81709).

2008-03-12  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* main.cc (view_section) : NULL check
	* util.cc (unref_section_info) : unrefs a section_info element
	(make_global_section_list) : refs section_info elements before
	setting them as the data of the buttons' callbacks; uses
	unref_section_info to unref them once the buttons are destroyed
	(N82316).

2008-03-11  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* main.cc (search_packages_reply) : small code correction

	* update-notifier.c (xexp_is_tag_and_not_empty) : checks whether
	a xexp is not NULL, has the given tag and isn't empty
	(compare_xexp_text) : gets the children with the given tag in two
	xexp and compares their texts
	(create_new_notifications_menu) : use xexp_is_tag_and_not_empty
	and compare_xexp_text for a cleaner code
	(handle_inotify) : if there are new notifications available, an empty